# digital-quantum-simulation-ising

./: 01_exact_two_qubit_ising.ipynb  02_first_order_trotter.ipynb  03_second_order_trotter_convergence.ipynb  LICENSE  README.md  pyproject.toml
Docs/: analytical_derivations.tex
Ising_sim_helper/: __init__.py  circuits.py  dynamics.py  operators.py
