[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ising-sim"
version = "0.1.0"
description = "Exact and Trotterized simulation of a transverse-field Ising model"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "qiskit",
]

[tool.setuptools.packages.find]
where = ["src"]
